fix: improve blink docs and reduce monaco suggest-details line-spacing
These are really independent but the second one arose while I was fixing the first, and they're both very short.

Feel free to adjust the line spacing -- 4-lines was just way too much.

for the first, see https://github.com/bitfocus/companion/issues/674#issuecomment-3864522512 and my reply there

--- a/webui/src/scss/_expression.scss
+++ b/webui/src/scss/_expression.scss
@@ -62,3 +62,14 @@
 		}
 	}
 }
+
+// full path is: .monaco-editor .suggest-widget, .monaco-editor .suggest-details
+.monaco-editor .suggest-details {
+	line-height: 1.5 !important;
+	min-height: 15em;
+
+	.docs {
+		padding-top: 1em;
+		padding-bottom: 1em;
+	}
+}
